install pytorch (& downgrade to python 3.11)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ authors = ["Kasra Safari <kasrasafari@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12, <3.13"
+python = ">=3.11, <3.13"
 jupyter = "^1.0.0"
 numpy = "^1.26.0"
 matplotlib = "^3.8.0"
+graphviz = "^0.20.1"
+torch = "^2.1.0"
 
 
 [build-system]
